tests/baselines/reference/parserVariableStatement2.d.errors.txt
parserVariableStatement2.d.ts(1,1): error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.


==== parserVariableStatement2.d.ts (1 errors) ====
    var v;
    ~~~
!!! error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.